# cserial

./: .gitignore  CMakeLists.txt  main.cpp
dtc/: DynTypC.cpp  DynTypC.h  Serial.cpp  Serial.h  Type.cpp  Type.h  VarMath.cpp  VarMath.h  Variable.cpp  Variable.h
